--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 				<div class="one-third column" style="margin-top: 25%">
 					<h4><b>READT</b>alk Messenger</h4>
 					<p>
-						⚙️
+						Build Edge Chatroom by Durable Object
 					</p>
 				</div>
 				<div class="two-thirds column" id="root"></div>
