--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 		<meta charset="utf-8" />
-		<title>READTalk - ChatRoom</title>
+		<title>READTalk - Chat</title>
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 
